[package]
name = "lpd-officer-monitor"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
# serenity = "0.10"
# poise = "0.0.0"
serenity = { git = "https://github.com/serenity-rs/serenity" }
poise = { git = "https://github.com/kangalioo/poise", branch = "develop" }

entity = { path = "entity" }
migration = { path = "migration" }
dotenv = "0.15"

tokio = { version = "1.17", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

lazy_static = "1.4"
